<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionSettings"
        android:orderInCategory="100"
        android:title="@string/menuSettings"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionHistory"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:orderInCategory="50"
        android:title="@string/menuHistory"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionFavorites"
        android:icon="@android:drawable/btn_star_big_on"
        android:orderInCategory="20"
        android:title="@string/menuFavorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionSearch"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="5"
        android:title="@string/menuSearch"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
</menu>